# poke-scanning

./: .gitignore  pyproject.toml  todos.md
.github/: copilot-instructions.md  tech-debt.md
.github/prompts/: tech-debt.prompt.md
data/: card_embeddings_meta.json  card_hashes.db  mobilenet_v3_small.onnx  mobilenet_v3_small.onnx.data
data/metadata/: sets.json
data/metadata/cards/: base1.json  base2.json  base3.json  base4.json  base5.json  base6.json  basep.json  bp.json  bw1.json  bw10.json  bw11.json  bw2.json  bw3.json  bw4.json  bw5.json  bw6.json  bw7.json  bw8.json  bw9.json  bwp.json  cel25.json  cel25c.json  col1.json  dc1.json  det1.json  dp1.json  dp2.json  dp3.json  dp4.json  dp5.json  dp6.json  dp7.json  dpp.json  dv1.json  ecard1.json  ecard2.json  ecard3.json  ex1.json  ex10.json  ex11.json  (+132 more)
data/tests/: image_3x3_annotation.json  image_psa_graded_charizard_annotation.json  moltres_151_annotation.json
data/tests/graded_cards/: _annotations.json
data/tests/multiple_cards/: _annotations.json
data/tests/single_cards/axis_aligned/: _annotations.json
data/tests/single_cards/rotated/: _annotations.json
data/tests/single_cards/tilted/: _annotations.json
data/tests/single_cards/top_loader/: _annotations.json
docs/: ARCHITECTURE.md  debug_output.md  edge-detection-fixes.md  known_issues.md  phase1_performance_plan.md  phase3_cnn_faiss_plan.md  realtime_performance_plan.md
scripts/: brightness_experiment.py  build_embedding_db.py  build_hash_db.py  check_cards.py  debug_detector.py  debug_detector2.py  debug_electivire.py  debug_electivire2.py  debug_electivire3.py  debug_matching.py  download_reference_data.py  export_model.py  find_cards.py  find_sets.py  finetune_model.py  profile_pipeline.py  save_crops.py
src/card_reco/: __init__.py  __main__.py  cli.py  cli_test.py  database.py  database_test.py  debug.py  debug_test.py  detector.py  embedder.py  faiss_index.py  hasher.py  matcher.py  matcher_test.py  models.py  pipeline.py  pipeline_test.py  scanner.py
src/card_reco/detector/: __init__.py  constants.py  corners.py  corners_test.py  detector_test.py  nms.py  nms_test.py  quality.py  quality_test.py  strategies.py  strategies_test.py
tests/: test_cnn_integration.py  test_database.py  test_detector.py  test_edge_detection.py  test_embedder.py  test_faiss_index.py  test_hasher.py  test_integration.py  test_matcher.py  test_regression.py  test_scanner.py
